--- a/css/styles.css
+++ b/css/styles.css
@@ -91,13 +91,12 @@ img {
 }
 
 .logo {
+  display: inline-block;
   color: var(--title-text-color);
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-
-  display: inline-block;
   margin-right: 93px;
 }
 .logo-span {
@@ -133,6 +132,7 @@ img {
 .auth-nav .link:focus {
   color: var(--accent-color);
   fill: var(--accent-color);
+  transition: transform 250ms ease;
 }
 .icon-container {
   display: flex;
@@ -147,9 +147,6 @@ img {
   height: 100%;
   background-size: contain;
 }
-/* .icon-container:hover.head-icon {
-  fill: var(--accent-color);
-} */
 /* hero */
 .hero {
   max-width: 1600px;
@@ -266,11 +263,10 @@ img {
   margin-bottom: 10px;
 }
 .features-content {
+  display: flex;
   color: var(--primary-text-color);
   margin-top: 0;
   margin-bottom: 0;
-
-  display: flex;
 }
 .pattern {
   display: flex;
@@ -282,9 +278,6 @@ img {
 .section-patern {
   padding-top: 0;
 }
-/* .pattern-item:not(:last-child) {
-  margin-right: 30px;
-} */
 .team {
   display: flex;
 }
@@ -303,14 +296,11 @@ img {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
-
   margin-top: 0;
   margin-bottom: 0;
   padding-bottom: 16px;
   text-align: center;
-
-  background: #ffffff;
-
+  background: var(--white-color);
   border-bottom: 4px;
 }
 .team-style {
@@ -344,6 +334,7 @@ img {
 .social-link:focus {
   background-color: var(--accent-color);
   fill: var(--white-color);
+  transition: transform 250ms ease;
 }
 .hiden {
   clip-path: inset(100%);
@@ -376,6 +367,7 @@ img {
 .company-link:focus {
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
+  transition: transform 250ms ease;
 }
 .clients-item:last-child {
   margin-right: 0;
@@ -440,9 +432,41 @@ img {
 .footer-link .social-link:hover,
 .footer-link .social-link:focus {
   background-color: var(--accent-color);
+  transition: transform 250ms ease;
 }
 
 /* portfolio */
+.filter-button {
+  color: var(--title-text-color);
+  background-color: var(--third-bg-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+
+  border-radius: 4px;
+  border: none;
+  padding: 6px 22px;
+}
+.filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.filter-item {
+  display: inline-block;
+  text-align: center;
+  margin-right: 8px;
+  border: none;
+}
+.filter-button:hover,
+.filter-button:focus {
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: transform 250ms ease;
+}
 .example-title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -466,6 +490,7 @@ img {
 .example-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: transform 250ms ease;
 }
 .example-link {
   display: inline-block;
@@ -482,36 +507,7 @@ img {
 .example-work {
   padding: 20px 24px 20px 24px;
 }
-.filter-item {
-  display: inline-block;
-  text-align: center;
-  margin-right: 8px;
-  border: none;
-}
-.filter-button:hover,
-.filter-button:focus {
-  color: var(--white-color);
-  background-color: var(--accent-color);
-  cursor: pointer;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.filter-button {
-  color: var(--title-text-color);
-  background-color: var(--third-bg-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
 
-  border-radius: 4px;
-  border: none;
-  padding: 6px 22px;
-}
-.filter {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-}
 .example {
   margin: 0;
   list-style: none;
@@ -525,4 +521,75 @@ img {
 }
 .example-items:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translatey(100%);
+  transition: transform 250ms ease;
+}
+
+.overlay > p {
+  position: absolute;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.55em;
+  top: 25%;
+  left: 5%;
+  right: 5%;
+  bottom: 10%;
+  /* padding: 63px 24px; */
+  color: var(--white-color);
+}
+.example-img {
+  position: relative;
+  overflow: hidden;
+  margin-bottom: auto;
+  margin-right: auto;
+}
+.example-link:hover .overlay {
+  opacity: 1;
+  transform: translatex(0);
+  transition: transform 250ms ease;
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+  background-color: #fff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal button {
+  position: absolute;
+  border: none;
+  background-color: #fff;
+  top: 8px;
+  right: 8px;
+  fill: var(--white-color);
+}
+.modal button:hover {
+  fill: var(--accent-color);
 }
